# Utilities

./: .gitignore  CMakeLists.txt  README.md
docs/cli/: cli.md
docs/config/: config.md
docs/config/Checkers/: doesKeyExist.md  doesKeyHaveValue.md  doesSectionExist.md  doesSectionHaveKeys.md  isEmpty.md
docs/config/File Handling/: readConfigFromFile.md  saveConfigToFile.md  writeConfigToFile.md
docs/config/Methods/: constructors.md  getValueOf.md  modifyValueInFile.md  setConfig.md
docs/config/Modifiers/: addKey.md  addKeyValue.md  addSection.md  clear.md  clearKeyValue.md  clearSection.md  modifyKeyName.md  modifyKeyValue.md  modifySectionName.md  removeKey.md  removeSection.md
docs/config/Operators/: operator==.md
docs/config/Setters/: setConfigFromFile.md
docs/path/: path.md
docs/path/Enums/: CopyOption.md  SizeMetric.md  Traversal.md
docs/path/Functions/: absolute.md  absolutePath.md  copy.md  create.md  currentPath.md  directorySeparator.md  execute.md  exists.md  fileExtension.md  fileSize.md  filename.md  find.md  findAll.md  hasFileExtension.md  hasSameContent.md  isAbsolute.md  isAbsolutePath.md  isDirectory.md  isDirectorySeparator.md  isFile.md  isRelative.md  (+13 more)
include/: cli.hpp  config.hpp  container_traits.hpp  fileparser.hpp  path.hpp  print.hpp  utility.hpp
src/: main.cpp
test/: CMakeLists.txt
test/src/: cli_test.cpp  config_test.cpp  path_test.cpp  utility_test.cpp
test/test_path/config/: actual.txt  config.txt  expected.txt  test.txt
test/test_path/path/same2/: d.txt
test/test_path/path/temp/sandbox/doodle/: doodle.txt
(+1 files in other folders)
